# rig-acp-discovery

./: Cargo.toml  README.md
src/: agent_kind.rs  agent_status.rs  detect.rs  lib.rs  options.rs
src/detection/: mod.rs  parser.rs  path_finder.rs  version.rs
src/install/: errors.rs  executor.rs  info.rs  mod.rs  prereq.rs  progress.rs  types.rs
tests/: integration_detect.rs
