[package]
name = "rig-acp-discovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent discovery for AI coding agents (Claude Code, Codex, OpenCode, Gemini)"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rig", "ai", "agent", "discovery", "cli"]
categories = ["development-tools"]

[dependencies]
semver = "1.0"
strum = { version = "0.27", features = ["derive"] }
which = "7.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "process", "time"] }
futures = "0.3"
regex = "1.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3.0"
